# scikit-survival

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .zenodo.json  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  appveyor.yml  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.binder/: environment.yml  postBuild
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation_improvement.yml  feature_request.md  feature_request.yml
.github/workflows/: linux-workflow.yaml  macos-workflow.yaml  nbval-workflow.yaml  pre-commit.yaml  tests-workflow.yaml  tox-workflow.yaml  wheels-workflow.yaml
ci/: before_install_travis.sh  list-requirements.py  nb_sanitize.cfg  render-requirements.py  run_tests.sh  setup_conda.ps1  setup_conda.sh  setup_env.sh  submit_coverage.sh
ci/appveyor/: extract-archive.py  py310.ps1  py311.ps1  py312.ps1  py313.ps1  py314.ps1  py38.ps1  py39.ps1  requirements_310.yaml  requirements_311.yaml  requirements_35.txt  requirements_35.yaml  requirements_36.txt  requirements_36.yaml  requirements_37.yaml  requirements_38.yaml  requirements_39.yaml  requirements_base.txt
conda-recipe/: conda_build_config.yaml  meta.yaml
data/: GBSG2.arff  README.md  actg320.arff
doc/: .gitignore  Makefile  api.rst  cite.rst  conf.py  contributing.rst  docs_requirements.txt  getting_started.rst  index.rst  install.rst  release_notes.rst  spelling_wordlist.txt  understanding_predictions.rst
doc/_static/: buttons.js  custom.css  github-stats.js
doc/_templates/: docs-navbar.html  icon-links.html  navbar-github-links.html
doc/api/: compare.rst  datasets.rst  ensemble.rst  functions.rst  index.rst  io.rst  kernels.rst  linear_model.rst  meta.rst  metrics.rst  nonparametric.rst  preprocessing.rst  svm.rst  tree.rst  util.rst
doc/examples/: 00-introduction.ipynb  evaluating-survival-models.ipynb  survival-svm.ipynb
doc/release_notes/: v0.1.rst  v0.10.rst  v0.11.rst  v0.12.rst  v0.13.rst  v0.14.rst  v0.15.rst  v0.16.rst  v0.17.rst  v0.18.rst  v0.19.rst  v0.2.rst  v0.20.rst  v0.21.rst  v0.22.rst  v0.23.rst  v0.24.rst  v0.25.rst  v0.26.rst  v0.27.rst  v0.3.rst  v0.4.rst  v0.5.rst  v0.6.rst  v0.7.rst  v0.8.rst  v0.9.rst
doc/sphinxext/: setup.py
doc/user_guide/: 00-introduction.ipynb  boosting.ipynb  competing-risks.ipynb  coxnet.ipynb  evaluating-survival-models.ipynb  index.rst  matplotlibrc  random-survival-forest.ipynb  survival-svm.ipynb  understanding_predictions.rst
examples/: 00-introduction.ipynb  evaluating-survival-models.ipynb  grid_search_parallel.py  plot-performance.py  random-survival-forest.ipynb  rsf_brier_calibration.py  survival-svm.ipynb
notebooks/: test_predict_expectation.ipynb
requirements/: dev.txt  prod.txt
sksurv/: __init__.py  _version.py  base.py  column.py  compare.py  docstrings.py  exceptions.py  functions.py  metrics.py  nonparametric.py  preprocessing.py  setup.py  testing.py  util.py
sksurv/_dataframe/: __init__.py  _categorical_encoding.py  _categorical_semantics.py  _column_impl.py  _concat.py  _input.py  _pandas.py  _polars.py
sksurv/bintrees/: __init__.py  _binarytrees.cpp  _binarytrees.pyx  binarytrees.cpp  setup.py
sksurv/datasets/: __init__.py  base.py  setup.py
sksurv/ensemble/: __init__.py  _coxph_loss.c  _coxph_loss.pyx  boosting.py  forest.py  setup.py  survival_loss.py
sksurv/io/: __init__.py  arffread.py  arffwrite.py
sksurv/kernels/: __init__.py  _clinical_dataframe.py  _clinical_kernel.c  _clinical_kernel.pyx  clinical.py  setup.py
sksurv/linear_model/: __init__.py  _coxnet.pyx  _coxph.pyx  aalen.py  aft.py  coxnet.py  coxph.py  group_penalty.py  setup.py
sksurv/meta/: __init__.py  base.py  ensemble_selection.py  stacking.py
sksurv/svm/: __init__.py  _minlip.c  _minlip.pyx  _prsvm.c  _prsvm.pyx  minlip.py  naive_survival_svm.py  setup.py  survival_svm.py
sksurv/tree/: __init__.py  _criterion.pyx  setup.py  tree.py
survival/: base.py  column.py  datasets.py  io.py  metrics.py  setup.py  util.py
survival/bintrees/: __init__.py  _binarytrees.cpp  _binarytrees.pyx  binarytrees.h  setup.py
survival/ensemble/: _coxph_loss.c  boosting.py  setup.py
survival/io/: arffread.py  arffwrite.py
survival/kernels/: _clinical_kernel.c  clinical.py
survival/linear_model/: aft.py
survival/meta/: __init__.py  base.py  ensemble_selection.py
survival/svm/: __init__.py  _minlip.c  _minlip.pyx  _prsvm.c  _prsvm.pyx  minlip.py  naive_survival_svm.py  setup.py  survival_svm.py
tests/: conftest.py  dataframe_test_utils.py  test_aalen.py  test_aft.py  test_binarytrees.py  test_boosting.py  test_clinical_kernel.py  test_column.py  test_common.py  test_compare.py  test_coxnet.py  test_coxph.py  test_dataframe.py  test_datasets.py  test_ensemble_selection.py  test_forest.py  test_functions.py  test_io.py  test_metrics.py  test_minlip.py  test_nonparametric.py  test_pandas_inputs.py  test_polars_clinical_kernel.py  test_polars_column.py  test_polars_datasets.py  test_polars_estimators.py  test_polars_preprocessing.py  test_polars_util.py  test_preprocessing.py  test_show_versions.py  test_stacking.py  test_survival_function.py  test_survival_svm.py  test_tree.py  test_util.py
tests/data/: Lagakos_AIDS_adults.csv  Lagakos_AIDS_children.csv  bmt.csv  breast_cancer_glmnet_coefficients.csv  breast_cancer_glmnet_coefficients_high.csv  cgvhd_aalen.npy  cgvhd_delta.npy  cgvhd_dinse.npy  channing.csv  compnentwise-gradient-boosting-coxph-cumhazard.csv  compnentwise-gradient-boosting-coxph-surv.csv  cox-example-coef-1-pf.csv  cox-example-coef-1-pf2.csv  cox-example-coef-1-unpen.csv  cox-example-coef-1.csv  cox-example-coef-2-alpha.csv  cox-example-coef-2-nalpha-norm.csv  cox-example-coef-2-nalpha.csv  cox-example-coef-2-norm.csv  cox-example-coef-2-std.csv  cox-example-coef-2.csv  cox-example.csv  cox-simple-coef.csv  gradient-boosting-coxph-cumhazard.csv  gradient-boosting-coxph-surv.csv  whas500-noties.arff  (+1 more)
(+27 files in other folders)
