[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
    "packaging",
    # same as scikit-learn
    "Cython>=3.0.10",
    # building against numpy 2.x is compatible with numpy 1.x
    "numpy>=2.0.0",

    # scikit-learn requirements
    "scikit-learn~=1.6.1; python_version<='3.13'",
    "scikit-learn; python_version>'3.13'",
]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-survival"
description = "Survival analysis built on top of scikit-learn"
readme = "README.rst"
authors = [
    {name = "Sebastian Pölsterl", email = "sebp@k-d-w.org"}
]
license = {file = "COPYING"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "ecos",
    "joblib",
    "numexpr",
    "numpy",
    "osqp >=0.6.3,<1.0.0",
    "pandas >=1.4.0",
    "scipy >=1.3.2",
    "scikit-learn >=1.6.1,<1.7",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/sebp/scikit-survival"
"Documentation" = "https://scikit-survival.readthedocs.io"
"Source Code" = "https://github.com/sebp/scikit-survival"
"Bug Tracker" = "https://github.com/sebp/scikit-survival/issues"
"Release Notes" = "https://scikit-survival.readthedocs.io/en/latest/release_notes.html"

[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "build",
    "coverage",
    "Cython >=3.0.10",
    "packaging",
    "pre-commit",
    "pytest",
    "ruff",
    "setuptools-scm >=8",
    "tomli",
    "tox",
]

# This file purposely does not contain libraries that depend on C modules.
# See https://docs.readthedocs.io/en/latest/faq.html#i-get-import-errors-on-libraries-that-depend-on-c-modules
docs = [
    "ipython !=8.7.0",
    "nbsphinx>=0.9.2",
    "docutils",
    "setuptools-scm",
    "sphinx ~=8.1.3",
    "pydata-sphinx-theme ~=0.16.1",
    "sphinxcontrib-spelling",
    "sphinx-design ~=0.6.1",
    "sphinx-copybutton ~=0.5.2",
]

nbval = [
    "ipykernel",
    "ipython!=8.7.0",
    "matplotlib~=3.9.0",
    "nbformat",
    "nbval>=0.10.0",
    "seaborn~=0.13.2",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["sksurv*"]
namespaces = false

[tool.setuptools.package-data]
"sksurv.datasets" = ["data/*.arff"]

[tool.black]
line-length = 120
extend-exclude = "sksurv/linear_model/src/eigen"
target-version = ["py310"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
testpaths = ["tests"]
filterwarnings = [
    # Treat all warnings as errors other than the ignored ones
    "error",
    # distutils is deprecated in 3.10, scheduled for removal in 3.12
    "ignore:The distutils package is deprecated:DeprecationWarning",
    "ignore:Setuptools is replacing distutils",
    "ignore:distutils Version classes are deprecated.*:DeprecationWarning",
    "ignore:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning",
    # added with pandas 2.1
    "ignore:DataFrame.applymap has been deprecated:FutureWarning",
    # deprecated since Pandas 2.2.0
    "ignore:\\nPyarrow will become a required dependency of pandas in the next major release of pandas.*:DeprecationWarning",
    # deprecated since Python 3.12
    "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\) is deprecated and scheduled for removal in a future version.*:DeprecationWarning",
    "ignore:ast\\.Num is deprecated and will be removed in Python 3\\.14.*:DeprecationWarning",
    "ignore:Attribute n is deprecated and will be removed in Python 3\\.14.*:DeprecationWarning",
    # deprecated since NumPy 1.25
    "ignore:np\\.find_common_type is deprecated.  Please use `np\\.result_type` or `np\\.promote_types`:DeprecationWarning",
    # deprecated since NumPy 2.0
    "ignore:`trapz` is deprecated\\. Use `trapezoid` instead.*:DeprecationWarning",
]

[tool.coverage.run]
branch = true
plugins = ["Cython.Coverage"]
relative_files = true
source = ["sksurv"]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]
ignore_errors = true

omit = [
    "tests/*",
    "*/setup.py",
    "*/_version.py",
]

[tool.ruff]
extend-exclude = [
    "doc/conf.py",
    "sksurv/linear_model/src/eigen",
]
# Group violations by containing file.
output-format = "grouped"
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = ["A005", "C408"]
ignore-init-module-imports = true
select = [
    # pycodestyle
    "E",
    "W",
    # mccabe
    "C90",
    # pyflakes
    "F",
    # isort
    "I",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-pytest-style
    "PT",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true
parametrize-names-type = "csv"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["sksurv"]

[tool.setuptools_scm]
